Solve issue with plan view camera flickering on pan

--- a/src/style.css
+++ b/src/style.css
@@ -118,9 +118,12 @@ canvas {
   display: block;
   width: 100%;
   height: 100%;
-  cursor: crosshair;
   /* border-radius: 2px; */
   /* object-fit: contain; */
+}
+
+.plan-view {
+  cursor: none;
 }
 
 .hidden {
